add preloader on starting page

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -6,6 +6,12 @@ html.h-100(lang="en")
     script.
       var gon = !{JSON.stringify(gon)};
   body.d-flex.flex-column.h-100
+    #loader
+      .preloader
+        .preloader__content
+          .preloader__first
+          .preloader__second
+          .preloader__third
     nav.navbar.navbar-expand-lg.navbar-light.bg-faded
       a.navbar-brand(href="/") Chat
       button.navbar-toggler(data-toggle="collapse" data-target="#navbarSupportedContent")
