--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,13 +1,10 @@
-* {
-  margin: 0;
-}
 .preloader {
   --bg-color: #34314c;
   --size:200px;
   --first-color:#ff7473;
   --second-color:#ffc952;
   --third-color:#47b8e0;
-  --thickness: 3px;
+  --thickness: 5px;
   --duration: 1s;
   position: fixed;
   width: 100%;
@@ -17,6 +14,7 @@
   justify-content: center;
   align-items: center;
   transition: var(--duration);
+  z-index: 2;
 }
 
 .preloader__content {
@@ -30,6 +28,7 @@
 .preloader__third {
   position: absolute;
   width: 100%;
+  height: 100%;
   border-radius: 50%;
   animation: var(--duration) linear infinite;
 }
@@ -62,4 +61,9 @@
 @keyframes third {
   0% { transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg); }
   100% { transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg); }
+}
+
+.done {
+opacity: 0;
+visibility: hidden;
 }
