add: remove and rename logic for channels

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -79,6 +79,10 @@ body {
 }
 
 #style-add-button {
+  background-color: #555555;
+  border-color: grey;
+}
+#style-re-button {
   background-color: grey;
   border-color: grey;
 }
