--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -3,6 +3,7 @@ html(lang="en")
   head
     title= Title
     link(href=assetPath('main.css') rel="stylesheet")
+    meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
     script.
       var gon = !{JSON.stringify(gon)};
   body.d-flex.flex-column
